# Test_Task

Test_Zad/Test_Zad/: CMakeLists.txt  Test_Zad.cpp  Test_Zad.h
Test_Zad/Test_Zad/lib/cmake/boost_container-1.85.0/: boost_container-config.cmake
Test_Zad/Test_Zad/lib/cmake/boost_context-1.85.0/: boost_context-config.cmake
Test_Zad/Test_Zad/lib/cmake/boost_contract-1.85.0/: boost_contract-config.cmake
Test_Zad/Test_Zad/lib/cmake/boost_coroutine-1.85.0/: boost_coroutine-config.cmake
Test_Zad/Test_Zad/lib/cmake/boost_date_time-1.85.0/: boost_date_time-config.cmake
Test_Zad/Test_Zad/lib/cmake/boost_exception-1.85.0/: boost_exception-config.cmake
Test_Zad/Test_Zad/lib/cmake/boost_graph-1.85.0/: boost_graph-config.cmake
Test_Zad/Test_Zad/lib/cmake/boost_graph_parallel-1.85.0/: boost_graph_parallel-config.cmake
Test_Zad/Test_Zad/lib/cmake/boost_headers-1.85.0/: boost_headers-config.cmake
Test_Zad/Test_Zad/lib/cmake/boost_iostreams-1.85.0/: boost_iostreams-config.cmake
Test_Zad/Test_Zad/lib/cmake/boost_mpi-1.85.0/: boost_mpi-config.cmake
Test_Zad/Test_Zad/lib/cmake/boost_numpy-1.85.0/: boost_numpy-config.cmake
Test_Zad/Test_Zad/lib/cmake/boost_prg_exec_monitor-1.85.0/: boost_prg_exec_monitor-config.cmake
Test_Zad/Test_Zad/lib/cmake/boost_program_options-1.85.0/: boost_program_options-config.cmake
Test_Zad/Test_Zad/lib/cmake/boost_python-1.85.0/: boost_python-config.cmake
Test_Zad/Test_Zad/lib/cmake/boost_random-1.85.0/: boost_random-config.cmake
Test_Zad/Test_Zad/lib/cmake/boost_regex-1.85.0/: boost_regex-config.cmake
Test_Zad/Test_Zad/lib/cmake/boost_serialization-1.85.0/: boost_serialization-config.cmake
Test_Zad/Test_Zad/lib/cmake/boost_system-1.85.0/: boost_system-config.cmake
Test_Zad/Test_Zad/lib/cmake/boost_timer-1.85.0/: boost_timer-config.cmake
Test_zad_v2/Test_zad_v2/: CMakeLists.txt  Test_zad_v2.cpp  Test_zad_v2.h
(+4 files in other folders)
